--- a/pen.html
+++ b/pen.html
@@ -32,7 +32,7 @@
 	<div style="background-color:beige; padding-top: 10px;">
 		<img src="pen.png" style="width:250px">
 		<br>
-		<p style="font-size:20px;font-display: fallback;">008482932, FLAIR CONCORD, PU PRICE: 60 INR</p>
+		<p style="font-size:20px;font-display: fallback;">008482932, DIOR FARHENHEIT, PU PRICE: 6000 INR</p>
 
 		<br>
 		<br>
