--- a/index.html
+++ b/index.html
@@ -8,12 +8,23 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 	<title></title>
 </head>
-<body style="background-color: navy;">
-
-	<img src="logo.jpg" style="width: 600px">
+<body style="color: lightpink; background-image: url(backi.jpg) ; background-color: rgba(14, 8, 196, 0.54);">
 	<br>
 	<br>
-	<center><h1 style="color: navy; font-family: monospace;"><button><a href="GoShop.html">GoSHOPPING</a></button><b></b></h1></center>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	
+	<center><h1 style="color: navy; font-family: monospace; font-size: auto;"><b><button><a href="GoShop.html">GoSHOPPING</a></button></b></h1></center>
 
 </body>
 </html>
