--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<br>
 	<br>
 	
-	<center><h1 style="color: navy; font-family: monospace; font-size: auto;"><b><button><a href="GoShop.html">GoSHOPPING</a></button></b></h1></center>
+	<center><h1 style="color: navy; font-family: monospace; font-size: auto;"><b><button><a href="location.html">GoSHOPPING</a></button></b></h1></center>
 
 </body>
 </html>
