--- a/location.html
+++ b/location.html
@@ -84,7 +84,7 @@
 <BR>
 
 <div class="popup" onclick="myFunction()"><button style="font-size: 50px;">TRACK ME</button>
-  <span class="popuptext" id="myPopup"><a href="#" style="color: whitesmoke; text-decoration: none;">yeh baburao ka style hai</a></span>
+  <span class="popuptext" id="myPopup"><a href="#" style="color: whitesmoke; text-decoration: none; text-align: center; font-size: 20px;">Your location has been trached</a></span>
 </div>
 
 <script>
