--- a/choices.html
+++ b/choices.html
@@ -26,7 +26,7 @@
 	<br><br><br>
 	<a href=""><button style="font-size: 25px; background-color: black; color: red;"> Look for stores..</button></a>
 	<br><br><br>
-	<a href=""><button style="font-size: 25px; background-color: black; color: red;"> Shop at a store </button></a>
+	<a href="band.html"><button style="font-size: 25px; background-color: black; color: red;"> Shop at a store </button></a>
 	</div>
 	</center>
 
