--- a/ready.html
+++ b/ready.html
@@ -20,7 +20,7 @@
 
 			GOOD TO GO
 
-			<a href="random.html"><button>RECIEVE DATA</button></a>
+			<a href="dorito.html"><button>RECIEVE DATA</button></a>
 			
 		</p>
 	</center>
