--- a/dorito.html
+++ b/dorito.html
@@ -19,20 +19,20 @@
 		<p style="font-size: 40px;">
 
 			
-			<div style="float: right; width: 200pxx;">
+			<div style="width: auto;">
 				<div style="float: right;">
-				<img src="logo.jpg" style=" width: 200px; ">
+				<img src="logo.jpg" style=" width: 100px; ">
 				
 			    </div>
-			    <div style="float: bottom;">
-				<img src="dis.png" style=" width: 200px; ">
+			    <div >
+				<img src="dis.png" style=" width: 50px; ">
 				
 			    </div>
 			</div>
 
 			<br>
 
-			<img src="dorito.png" style="float: left;">
+			<img src="dorito.png">
 
 
 		
