--- a/dorito.html
+++ b/dorito.html
@@ -25,7 +25,7 @@
 				
 			    </div>
 			    <div >
-				<img src="dis.png" style=" width: 50px; ">
+				<img src="dis.png" style=" width: 100px; float: left; ">
 				
 			    </div>
 			</div>
