--- a/dorito.html
+++ b/dorito.html
@@ -54,7 +54,7 @@
 			GOOD TO GO
 			<br>
 
-			<a href="bandmode.html"><button>SHOP MORE</button></a>
+			<a href="product.html"><button>SHOP MORE</button></a>
 			
 			<a href="cart.html" style="text-decoration: none;"><button>EXIT</button></a>
 			
