--- a/band.html
+++ b/band.html
@@ -23,7 +23,7 @@
 	<div style="align-content: center; padding: 100px;">
 		<a href="ready.html"><button style="font-size: 40px; background-color: black; color: red;"> USE BAND</button></a>
 	<br><br><br>
-	<a href=""><button style="font-size: 40px; background-color: black; color: red;"> USE CODE</button></a>
+	<a href="ui.html"><button style="font-size: 40px; background-color: black; color: red;"> USE CODE</button></a>
 	<br><br><br>
 	
 	</center>
