--- a/random.html
+++ b/random.html
@@ -29,7 +29,7 @@
 
 <center>
 	<div style="background-color:beige; padding-top: 10px;">
-		<img src="pen.png" style="width:250px">
+		<img src="cocacola.png" style="width:250px">
 		<br>
 		<p style="font-size:20px;font-display: fallback;">008482932, DIOR FARHENHEIT, PU PRICE: 6000 INR</p>
 
