--- a/pen.html
+++ b/pen.html
@@ -43,7 +43,7 @@
 		Do you wish to:
 
 		<a href="pen.html"><button>SHOP MORE</button></a> or 
-		<a href="delivery.html"><button>VIEW CART AND CHECKOUT</button>
+		<a href="pay.html"><button>VIEW CART AND CHECKOUT</button>
 </a>
 
 	</div>
