--- a/choices.html
+++ b/choices.html
@@ -22,11 +22,13 @@
 
 
 	<div style="align-content: center; padding: 100px;">
-		<a href=""><button style="font-size: 25px; background-color: black; color: red;"> Have ur own list?</button></a>
+		<a href="band.html"><button style="font-size: 25px; background-color: black; color: red;"> Shop at a store </button></a>
+		
 	<br><br><br>
-	<a href=""><button style="font-size: 25px; background-color: black; color: red;"> Look for stores..</button></a>
+	<a href="login.html"><button style="font-size: 25px; background-color: black; color: red;"> Look for stores..</button></a>
 	<br><br><br>
-	<a href="band.html"><button style="font-size: 25px; background-color: black; color: red;"> Shop at a store </button></a>
+		<a href="pay.html"><button style="font-size: 25px; background-color: black; color: red;"> Have ur own list?</button></a>
+	
 	</div>
 	</center>
 
