--- a/location.html
+++ b/location.html
@@ -81,7 +81,7 @@
 <BR>
 
 <div class="popup" onclick="myFunction()"><button style="font-size: 50px;">TRACK ME</button>
-  <span class="popuptext" id="myPopup"><a href="choices.html" style="color: whitesmoke; text-decoration: none; text-align: center; font-size: 20px;">Your location has been tracked</a></span>
+  <span class="popuptext" id="myPopup"><a href="choices.html" style="color: whitesmoke; text-decoration: none; text-align: center; font-size: 20px;">Your location has been tracked. Click HERE to move ahead.</a></span>
 </div>
 
 <script>
