--- a/dorito.html
+++ b/dorito.html
@@ -56,7 +56,7 @@
 
 			<a href="product.html"><button>SHOP MORE</button></a>
 			
-			<a href="cart.html" style="text-decoration: none;"><button>EXIT</button></a>
+			<a href="cart2.html" style="text-decoration: none;"><button>EXIT</button></a>
 			
 		</p>
 	</center>
