--- a/random.html
+++ b/random.html
@@ -31,7 +31,7 @@
 	<div style="background-color:beige; padding-top: 10px;">
 		<img src="cocacola.png" style="width:250px">
 		<br>
-		<p style="font-size:20px;font-display: fallback;">008482932, DIOR FARHENHEIT, PU PRICE: 6000 INR</p>
+		<p style="font-size:20px;font-display: fallback;">008482932, COCA-COLA , PU PRICE: 40 INR</p>
 
 		<br>
 		<br>
