--- a/random.html
+++ b/random.html
@@ -41,7 +41,7 @@
 
 		Do you wish to:
 
-		<a href="pen.html"><button>SHOP MORE</button></a> or 
+		<a href="uir.html"><button>SHOP MORE</button></a> or 
 		<a href="pay.html"><button>VIEW CART AND CHECKOUT</button>
 </a>
 
