--- a/pen.html
+++ b/pen.html
@@ -42,7 +42,7 @@
 
 		Do you wish to:
 
-		<a href="pen.html"><button>SHOP MORE</button></a> or 
+		<a href="ready.html"><button>SHOP MORE</button></a> or 
 		<a href="pay.html"><button>VIEW CART AND CHECKOUT</button>
 </a>
 
