--- a/cart2.html
+++ b/cart2.html
@@ -10,7 +10,7 @@
 </head>
 <body style="background-image: url(backi.jpg) ;">
 	<center>
-		<img src="cart2.png" style="float: left; width: 700px; padding-left: 50px;">
+		<img src="cart2.png" style="float: left; width: 600px; ">
 		<br>
 
 		<a href="pay.html" style="text-decoration:none; color:black; font-family: monospace;"><button style="font-size: 50px;">PAY</button></a>
