--- a/coke.html
+++ b/coke.html
@@ -56,7 +56,7 @@
 
 			<a href="meme.html"><button>SHOP MORE</button></a>
 			
-			<a href="cart2.html" style="text-decoration: none;"><button>EXIT</button></a>
+			<a href="cart2.html" style="text-decoration: none;"><button>CHECKOUT</button></a>
 			
 		</p>
 	</center>
