--- a/pay.html
+++ b/pay.html
@@ -173,7 +173,7 @@ span.price {
         <label>
           <input type="checkbox" checked="checked" name="sameadr"> Shipping address same as billing
         </label>
-        <a href="paid.html"><input type="submit" value="Continue to checkout" class="btn"></a>
+        <a href="paid.html"><button style="text-decoration: none">CONTINUE TO CHECKOUT</button></a>
       </form>
       <center><a href="paid.html" style=" font-size: 50px;"><button>USE WALLET</button></a></center>
     </div>
