--- a/pay.html
+++ b/pay.html
@@ -175,7 +175,7 @@ span.price {
         </label>
         <a href="paid.html"><center><button style="text-decoration: none; font-size: 30px">CONTINUE TO CHECKOUT</button></center></a>
       </form>
-      <center><a href="paid.html" style=" font-size: 50px;"><button>USE WALLET</button></a></center>
+      <center><a href="paid.html" style=" font-size: 50px; background-color: navy; color: ivory ;"><button>USE WALLET</button></a></center>
     </div>
   </div>
   <div class="col-25">
@@ -186,7 +186,7 @@ span.price {
       <p><a href="#">COCA COLA LMT</a> <span class="price">$.99</span></p>
      
       <hr>
-      <p>Total <span class="price" style="color:black"><b>$2.5</b></span></p>
+      <p>Total <span class="price" style="color:black;"><b>$2.5</b></span></p>
     </div>
   </div>
 </div>
