--- a/pay.html
+++ b/pay.html
@@ -173,9 +173,9 @@ span.price {
         <label>
           <input type="checkbox" checked="checked" name="sameadr"> Shipping address same as billing
         </label>
-        <a href="paid.html"><center><button style="text-decoration: none; font-size: 30px">CONTINUE TO CHECKOUT</button></center></a>
+        <center><button style="text-decoration: none; font-size: 30px; background-color: navy;"><a href="paid.html">CONTINUE TO CHECKOUT</a></button></center>
       </form>
-      <center><a href="paid.html" style=" font-size: 50px; background-color: navy; color: ivory ;"><button>USE WALLET</button></a></center>
+      <center><a href="paid.html" style=" font-size: 50px;  "><button>USE WALLET</button></a></center>
     </div>
   </div>
   <div class="col-25">
