--- a/pay.html
+++ b/pay.html
@@ -173,7 +173,7 @@ span.price {
         <label>
           <input type="checkbox" checked="checked" name="sameadr"> Shipping address same as billing
         </label>
-        <center><button style="text-decoration: none; font-size: 30px; background-color: navy;"><a href="paid.html">CONTINUE TO CHECKOUT</a></button></center>
+        <center><button style="text-decoration: none; font-size: 30px; background-color: navy;"><a href="paid.html" style=" texxt-decoration: none; ">CONTINUE TO CHECKOUT</a></button></center>
       </form>
       <center><a href="paid.html" style=" font-size: 50px;  "><button>USE WALLET</button></a></center>
     </div>
